err/webtoolbox.err
Listing '.'...
Listing './bin'...
Compiling './bin/check_site.py'...
Compiling './bin/http_bench.py'...
***   File "./bin/http_bench.py", line 25
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './bin/log_replay.py'...
***   File "./bin/log_replay.py", line 176
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './bin/red_spider.py'...
***   File "./bin/red_spider.py", line 43
    except UnicodeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './bin/wk_bench.py'...
***   File "./bin/wk_bench.py", line 49
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebToolbox-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webtoolbox'...
Compiling './lib/python3.5/site-packages/webtoolbox/clients.py'...
***   File "./lib/python3.5/site-packages/webtoolbox/clients.py", line 333
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
